[package]
name = "ifkash"
version = "0.1.0"
edition = "2021"
authors = ["kashifulhaque <haque.kashiful7@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7.2", features = ['http'] }
worker-macros = { version = "0.6", features = ['http'] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
futures = "0.3.31"
chrono = { version = "0.4.42", features = ["serde"] }
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
